#----------------------------------------------------------------------------------------------------
# ldl
# replaced Makefile with automake for easy linking
#----------------------------------------------------------------------------------------------------

noinst_LTLIBRARIES = libldl.la
libldl_la_SOURCES = ldl.cpp
noinst_HEADERS = ldl.h UFconfig.h
